--- a/src/views/css/MenuStyles.css
+++ b/src/views/css/MenuStyles.css
@@ -2,5 +2,21 @@
 ion-card {
   --background: #fff; /* Establece el color de fondo de las tarjetas */
 }
-
+.background {
+    --background: url('/src/img/fondo_huellas.jpg') 0 0/100% 100% no-repeat; /* Actualiza con la ruta correcta de tu imagen */
+  }
+  
+  .header-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+  
+  ion-icon[name="person-circle"] {
+    font-size: 2rem; /* Ajusta el tamaño como prefieras */
+    cursor: pointer;
+  }
+  
+  
 /* Estilos adicionales si son necesarios */
