--- a/src/views/css/LoginStyles.css
+++ b/src/views/css/LoginStyles.css
@@ -1,30 +1,25 @@
 .background {
-  background-image: url("@/img/fondo_huellas.jpg"); /* Ruta de la imagen de fondo */
-  background-size: cover; /* Ajustar el tamaño de la imagen para cubrir completamente el contenedor */
-  background-position: center; /* Centrar la imagen en el contenedor */
-  position: fixed; /* Fijar el fondo para que ocupe toda la pantalla */
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1; /* Colocar el fondo detrás del contenido */
-  margin: 0; /* Eliminar el margen para que el fondo no tenga espacios en blanco alrededor */
-  padding: 0; /* Eliminar el padding para que el fondo no tenga espacios en blanco alrededor */
+  --background: url("@/img/fondo_huellas.jpg") 0 0/ 100% 100% no-repeat; /* Ruta de la imagen de fondo */
+}
+.contenido {
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
-
-ion-input.custom {
+.custom {
   --background: #ffffff !important;
   --color: #000000;
   --placeholder-color: #170c0c;
   --placeholder-opacity: 0.5;
   width: 250px;
-  height: 10px;
   margin: 10px;
   font-family: 'Cuerpo';
+  --border-width: 0;
+  --background: transparent;
+  height: 45px !important;
+  min-height: 45px !important;
 }
 
 ion-toolbar{
@@ -39,15 +34,31 @@ ion-toolbar{
   margin-top: 50px;
   font-family: 'Cuerpo';
 }
-p{
-  color:#000000;
-  font-family: 'Cuerpo';
+p {
+  color: #000000;
+  font-family: "Cuerpo";
+  text-align: right;
+  font-size: 14px;
 }
 
 .olvidaste{
-  margin: -10px;
-  margin-left: 50px;
+  margin: -5px;
+  margin-left: 80px;
 }
 .pintar{
   color: #2c68a4;
+}
+
+.links-button{
+  --background: #D2B48C;
+  --border-radius: 20px;
+  color:#000000;
+  width: 80px !important;;
+  height: 20px !important;
+  min-height: 20px !important;
+  font-family: "Cuerpo";
+  font-size: 10px;
+}
+.registrate{
+  margin-top: 25px;
 }
