--- a/src/views/css/MascotasStyles.css
+++ b/src/views/css/MascotasStyles.css
@@ -14,4 +14,9 @@ ion-card {
   img {
     width: 100%; /* Asegúrate de que las imágenes se escalen correctamente */
   }
+  .floating-button {
+    position: fixed;
+    bottom: 20px; /* Ajusta según tu diseño */
+    right: 20px; /* Ajusta según tu diseño */
+  }
   
