--- a/src/views/css/ListCampaignsStyle.css
+++ b/src/views/css/ListCampaignsStyle.css
@@ -1,3 +1,87 @@
+.background {
+  --background: url("@/img/fondo_huellas.jpg") 0 0/ 100% 100% no-repeat; /* Ruta de la imagen de fondo */
+ display: flex;
+ justify-content: center;
+
+
+
+}
+ion-toolbar{
+  color:#000000;
+  --background: #D2B48C;
+  font-family: 'Titulo';
+}
+.InputUbicacion{
+  color: black;
+  font-family: 'Cuerpo';
+  font-size: 20px;
+  
+}
+.custom {
+  
+  --color: #000000;
+  --placeholder-color: #170c0c;
+  --placeholder-opacity: 0.5;
+  width: 100px;
+  margin: 10px;
+  font-family: 'Cuerpo';
+  --border-width: 0;
+  --background: transparent;
+  height: 35px !important;
+  min-height: 25px !important;
+  border-radius: 10px;
+  }
+
+.section1{
+  
+  display: flex;
+  justify-content: center;
+
+  margin-top: -25px;
+  flex-direction: column;
+
+}
+
+.btnUbi{
+  --background: #428cff
+  ;
+  position: relative;
+  top:-35px;
+  --border-radius: 20px;
+  color:white;
+  margin-top: 50px;
+  font-family: 'Cuerpo';
+}
+
+.cardmain{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.card{
+  width: 80%;
+  height: 560px;
+  background: #D2B48C ;
+  border: #000000 solid 1px;
+}
+.card .cardh img{
+  width: 100%;
+  height: 450px;
+  border-radius: 10px;
+  box-shadow: #000000 3px 3px 4px;
+  }
+  
+.card .cardh .titulo{
+  color: #000000;
+}
+
+.card .cardhh p{
+  color: #000000;
+}
+
+
 .floating-button {
     position: fixed;
     bottom: 20px; /* Ajusta según tu diseño */
