--- a/src/views/css/CampaingsPostStyle.css
+++ b/src/views/css/CampaingsPostStyle.css
@@ -16,8 +16,13 @@
   }
   ion-toolbar{
     color:#000000;
-    --background: #D2B48C;
+    --background: #FF7F00;
     font-family: 'Titulo'; 
+  }
+  .header-content {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
   }
   .btn-guardar{
     display: block;
