--- a/src/views/css/ListCampaignsStyle.css
+++ b/src/views/css/ListCampaignsStyle.css
@@ -8,8 +8,13 @@
 }
 ion-toolbar{
   color:#000000;
-  --background: #D2B48C;
+  --background: #FF7F00;
   font-family: 'Titulo';
+}
+.header-content {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 .InputUbicacion{
   color: black;
