--- a/src/views/css/MascotasStyles.css
+++ b/src/views/css/MascotasStyles.css
@@ -4,15 +4,20 @@
 }
 ion-toolbar{
   color:#000000;
-  --background: #D2B48C;
+  --background: #FF7F00;
   font-family: 'Titulo'; 
+}
+.header-content {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 ion-card {
     margin: 10px;
   }
   
   ion-card-header {
-    background-color: #D2B48C; /* Color de fondo para el header */
+    background-color: #FF7F00; /* Color de fondo para el header */
     color: white; /* Color del texto */
   }
   
@@ -20,7 +25,7 @@ ion-card {
     padding: 10px;
   }
   
-  img {
+.imagen {
     width: 100%; /* Asegúrate de que las imágenes se escalen correctamente */
   }
   .floating-button {
