--- a/src/views/css/PerfilStyles.css
+++ b/src/views/css/PerfilStyles.css
@@ -1,12 +1,7 @@
 .background {
   --background: url("@/img/fondo_huellas.jpg") 0 0/ 100% 100% no-repeat; /* Ruta de la imagen de fondo */
 }
-.contenido {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
+
 .custom {
   --background: #ffffff !important;
   --color: #000000;
@@ -20,13 +15,23 @@
   height: 45px !important;
   min-height: 45px !important;
 }
-
 ion-toolbar {
   color: #000000;
-  --background: #d2b48c;
+  --background: #FF7F00;
   font-family: "Titulo";
 }
-img {
+.header-content {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.contenido {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.imagen {
   height: 200px;
   width: 200px;
   background-size: cover;
@@ -34,7 +39,7 @@ img {
   border-radius: 50%;
 }
 .editar-button {
-  --background: #d2b48c;
+  --background: #FF7F00;
   --border-radius: 20px;
   color: #000000;
   margin-top: 25px;
