--- a/src/views/css/RegistroSyles.css
+++ b/src/views/css/RegistroSyles.css
@@ -1,7 +1,6 @@
 .background {
   --background: url("@/img/fondo_huellas.jpg") 0 0/ 100% 100% no-repeat; /* Ruta de la imagen de fondo */
 }
-
 .custom {
   --background: #ffffff !important;
   --color: #000000 !important;
@@ -18,8 +17,13 @@
 
 ion-toolbar {
   color: #000000;
-  --background: #d2b48c;
+  --background: #FF7F00;
   font-family: "Titulo";
+}
+.header-content {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 .contenido {
   margin-top: 100px;
@@ -48,12 +52,12 @@ ion-checkbox {
 
 ion-checkbox::part(container) {
   border-radius: 6px;
-  border: 2px solid #d2b48c;
-  --checkbox-background-checked: #d2b48c;
+  border: 2px solid #FF7F00;
+  --checkbox-background-checked: #FF7F00;
   --checkbox-background: #ffffff;
 }
 .registro-button{
-  --background: #D2B48C;
+  --background: #FF7F00;
   --border-radius: 20px;
   color:#000000;
   margin-top: 25px;
@@ -63,7 +67,7 @@ ion-input{
   --border-radius:20px;
 }
 .login-button{
-  --background: #D2B48C;
+  --background: #FF7F00;
   --border-radius: 20px;
   color:#000000;
   width: 90px !important;;
